test/fail/plus_atom_minus_int.j
class A {
    Void main() { return "a" + i - 5; }
}
